--- a/src/main/resources/public/sign-up.html
+++ b/src/main/resources/public/sign-up.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Punchclock Admin</title>
     <script src="auth.js"></script>
-    <script src="company.js"></script>
-    <script src="users.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/lux/bootstrap.min.css" type="text/css">
 </head>
 <body>
@@ -20,7 +18,7 @@
 
     <div class="row">
         <div class="col-12 py-3">
-            <h2 class="text-center py-3">Sign in</h2>
+            <h2 class="text-center py-3">Sign up</h2>
         </div>
         <div class="col-6 py-3">
             <label>Username</label>
@@ -30,11 +28,17 @@
             <label>Password</label>
             <input type="password" class="form-control" id="password">
         </div>
+        <div class="col-12">
+            <label>Company</label>
+            <select class="form-control" id="company">
+
+            </select>
+        </div>
         <div class="col-12 py-3 text-right">
-            <button class="btn btn-primary" onclick="login(document.getElementById('username').value, document.getElementById('password').value)">Login</button>
+            <button class="btn btn-primary" onclick="signup(document.getElementById('username').value, document.getElementById('password').value)">Login</button>
         </div>
     </div>
 </div>
+
 </body>
-<script src="/autoInsertData.js"></script>
 </html>
